--- a/P000698.opf/meta.yml
+++ b/P000698.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P000698
+id: P000698
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W8LS20620
   title: གངས་ཅན་ལྗོངས་སུ་འཁྲུངས་པའི་རྒྱུན་སྤྱོད་བོད་སྨན་སྐྱེས་དངོས་སྨན་རྫས་བཏུ་ཐབས་ཀྱི་ལག་དེབ།
-  volume: ''
   author: ''
+  volumes: ''
