--- a/P000698.opf/meta.yml
+++ b/P000698.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W8LS20620
   title: གངས་ཅན་ལྗོངས་སུ་འཁྲུངས་པའི་རྒྱུན་སྤྱོད་བོད་སྨན་སྐྱེས་དངོས་སྨན་རྫས་བཏུ་ཐབས་ཀྱི་ལག་དེབ།
   author: ''
-  volumes: ''
+  volumes:
+    9cc3a739c2d6429c9dc04705213f9841:
+      image_group_id: I8LS20622
+      title: ''
+      volume_number: 1
+      total_pages: 55
