--- a/P000698.opf/layers/v001/Pagination.yml
+++ b/P000698.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 792db168bc804b03894ff0a1e11c4a04
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   0bacf22dcc134625931c6a9d22a435d1:
