--- a/P000698.opf/meta.yml
+++ b/P000698.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P000698
 initial_creation_type: ocr
+created_at: 29/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W8LS20620
   title: གངས་ཅན་ལྗོངས་སུ་འཁྲུངས་པའི་རྒྱུན་སྤྱོད་བོད་སྨན་སྐྱེས་དངོས་སྨན་རྫས་བཏུ་ཐབས་ཀྱི་ལག་དེབ།
