--- a/P000698.opf/meta.yml
+++ b/P000698.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P000698
 initial_creation_type: ocr
 created_at: 29/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-16 16:37:41.839073
 source_metadata:
   id: bdr:W8LS20620
   title: གངས་ཅན་ལྗོངས་སུ་འཁྲུངས་པའི་རྒྱུན་སྤྱོད་བོད་སྨན་སྐྱེས་དངོས་སྨན་རྫས་བཏུ་ཐབས་ཀྱི་ལག་དེབ།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 55
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
